Fix:Chart AlignCenter

--- a/src/pages/enz/overview/overview.module.css
+++ b/src/pages/enz/overview/overview.module.css
@@ -82,6 +82,7 @@
   width: 80%;
   display: flex;
   flex-direction: column;
+  margin: auto;
   /* height: 200px; */
 }
 .xaxis {
